syntax = "proto3";

package auth.v1;

import "buf/validate/validate.proto";
import "auth/v1/common.proto";

option go_package = "github.com/spazzle-io/spazzle-api/services/auth/pb";

message RefreshAccessTokenRequest {
  string user_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}

message RefreshAccessTokenResponse {
  Session session = 1;
}
